--- a/produkter.html
+++ b/produkter.html
@@ -6,16 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <title>Kaffe Party | Produkter</title>
 </head>
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-dark text-white">
+    <nav class="navbar navbar-expand-lg text-white" style="background-color: #7e5217;">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
           aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon text-red"></span>
         </button>
         <a class="navbar-brand" href="index.html"><img src="/assets/logo.png" height="50" alt="Logo"></a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
@@ -72,6 +75,7 @@
       </div>
     </div>
   </footer>
+
 </body>
 
 </html>
