adding the product sections

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     </div>
   </man>
-  <footer class="bg-dark text-white pt-4">
+  <footer class=" text-white pt-4" style="background-color: #7e5217;">
     <div class="container">
       <div class="row">
         <!-- About Section -->
