--- a/om-oss.html
+++ b/om-oss.html
@@ -37,8 +37,10 @@
       </div>
     </nav>
   </header>
-  <man class="container">Om Oss</man>
-  <footer class="bg-dark text-white pt-4">
+  <man class="container">
+    <h1 class="text-center mb-4">Om Oss</h1>
+  </man>
+  <footer class=" text-white pt-4" style="background-color: #7e5217;">
     <div class="container">
       <div class="row">
         <!-- About Section -->
