--- a/produkter.html
+++ b/produkter.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kaffe Party | Produkter</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <title>Kaffe Party | Produkter</title>
 </head>
 
 <body>
@@ -37,11 +37,67 @@
       </div>
     </nav>
   </header>
-  <man class="container">Produkter</man>
+
+  <main class="container mt-5">
+    <h1 class="text-center mb-4">Produkter</h1>
+    <section id="coffee-machines">
+      <h2 class="mb-4">Kaffemaskiner</h2>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card">
+            <img src="/assets/coffemachine1.webp" class="card-img-top" alt="Coffee Machine 1">
+            <div class="card-body">
+              <h5 class="card-title">Modell 1</h5>
+              <p class="card-text">En beskrivning av kaffemaskin modell 1.</p>
+              <p class="card-text">Pris: $1000</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card">
+            <img src="/assets/coffemachine2.webp" class="card-img-top" alt="Coffee Machine 2">
+            <div class="card-body">
+              <h5 class="card-title">Modell 2</h5>
+              <p class="card-text">En beskrivning av kaffemaskin modell 2.</p>
+              <p class="card-text">Pris: $1200</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card">
+            <img src="/assets/coffemachine3.webp" class="card-img-top" alt="Coffee Machine 3">
+            <div class="card-body">
+              <h5 class="card-title">Modell 3</h5>
+              <p class="card-text">En beskrivning av kaffemaskin modell 3.</p>
+              <p class="card-text">Pris: $1500</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="coffee-parties" class="mt-5">
+      <h2 class="mb-4">Kaffeparty</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Företag</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante
+            dapibus diam.</p>
+        </div>
+        <div class="col-md-6">
+          <h3>Privatpersoner</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante
+            dapibus diam.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
   <footer class="bg-dark text-white pt-4">
     <div class="container">
       <div class="row">
-
         <div class="col-md-4">
           <h5>About Us</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante
