--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
           <img src="/assets/coffe5.webp" class="card-img-top img-fluid rounded" alt="coffe party image">
         </div>
         <div class="col-lg-4 col-sm-6 ml-4">
-          <h3 class="text-capitalize my-3">Vilka är vi?</h3>
-          <p class="lead text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, optio eaque
+          <h3 class="text-capitalize my-3 ">Vilka är vi?</h3>
+          <p class="lead text-center p-4" style="background-color: #ffe3bf36;">Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Praesentium, optio eaque
             neque quas amet fuga blanditiis repellat suscipit quaerat aperiam! Fugit vero aliquid consequuntur
             reiciendis ? Doloribus ipsam possimus cumque?
           </p>
@@ -59,7 +60,8 @@
         </div>
         <div class="col-lg-4 col-sm-6 ml-4">
           <h3 class="text-capitalize my-3">Vad gör vi?</h3>
-          <p class="lead text-center">Lorem ipsum dolor, sit consectetur adipisicing elit. Nisi omnis quod atque
+          <p class="lead text-center p-4" style="background-color: #ffe3bf36;">Lorem ipsum dolor, sit consectetur
+            adipisicing elit. Nisi omnis quod atque
             quo, quos neque veritatis rerum facilis autem. Dolores reiciendis quo provident itaque molestias repellendus
             dolor natus blanditiis numquam.
           </p>
@@ -71,7 +73,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 ml-4">
           <h3 class="text-capitalize my-3">Varför oss?</h3>
-          <p class="lead text-center">
+          <p class="lead text-center p-4" style="background-color: #ffe3bf36;">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae fugiat distinctio eum ut natus
             cupiditate harum molestias vitae, sit, dignissimos sint ullam dolor saepe atque, autem in delectus iusto id?
           </p>
@@ -83,7 +85,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 ml-4">
           <h3 class="text-capitalize my-3">Kaffeparty, så fungerar det!</h3>
-          <p class="lead text-center">
+          <p class="lead text-center p-4" style="background-color: #ffe3bf36;">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus incidunt quaerat eaque aliquid rem, aut
             distinctio deleniti consectetur perferendis, voluptatum non dignissimos nobis nisi unde nesciunt corporis
             alias autem facere!
@@ -97,44 +99,40 @@
   <footer class=" text-white pt-4" style="background-color: #7e5217;">
     <div class="container">
       <div class="row">
-        <!-- About Section -->
         <div class="col-md-4">
           <h5>About Us</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante
             dapibus diam.</p>
         </div>
 
-        <!-- Links Section -->
         <div class="col-md-4">
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Home</a></li>
-            <li><a href="#" class="text-white">About</a></li>
-            <li><a href="#" class="text-white">Services</a></li>
-            <li><a href="#" class="text-white">Contact</a></li>
+            <li><a href="index.html" class="text-white">Home</a></li>
+            <li><a href="om-oss.html" class="text-white">Om Oss</a></li>
+            <li><a href="produkter.html" class="text-white">Produkter</a></li>
           </ul>
         </div>
 
-        <!-- Contact Section -->
         <div class="col-md-4">
           <h5>Contact Us</h5>
           <ul class="list-unstyled">
             <li><i class="fa fa-map-marker"></i> 123 Street Name, City, Country</li>
-            <li><i class="fa fa-phone"></i> +123 456 7890</li>
-            <li><i class="fa fa-envelope"></i> info@example.com</li>
+            <li><a href="tel:+1234567890" style="text-decoration: none; color: white; cursor: pointer;">+123 456
+                7890</a></li>
+            <li><a href="mailto:info@example.com" style="text-decoration: none; color: white; cursor: pointer;"><i
+                  class="fa fa-envelope"></i> info@example.com<a>
+            <li>
           </ul>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="mt-3">© 2024 Your Company. All Rights Reserved.</p>
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="mt-3">© 2024 Your Company. All Rights Reserved.</p>
+          </div>
         </div>
       </div>
-    </div>
   </footer>
-
-
 </body>
 
 </html>
