--- a/om-oss.html
+++ b/om-oss.html
@@ -6,9 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
   <title>Kaffe Party | Om Oss</title>
 </head>
 
@@ -37,47 +34,85 @@
       </div>
     </nav>
   </header>
-  <man class="container">
-    <h1 class="text-center mb-4">Om Oss</h1>
-  </man>
+
+  <main class="container mt-5">
+    <div class="text-center mb-4">
+      <h1>Om Oss</h1>
+      <p>Lorem ipsum <strong>kaffeParty</strong> dolor sit amet consectetur adipisicing elit. Culpa molestias, illum
+        neque officia
+        suscipit labore
+        laboriosam sapiente nobis, <small>qui quaerat amet reprehenderit corrupti, sunt saepe odio cum nihil!
+          Blanditiis</small>, quae!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est deleniti accusantium, pariatur eos impedit possimus
+        inventore cumque incidunt, voluptatum numquam maiores fugit laborum quasi, <mark>similique praesentium</mark>
+        labore dolores
+        enim vitae!
+      </p>
+    </div>
+
+    <div class="row justify-content-center my-4">
+      <h2 class="text-center mb-4">More info</h2>
+      <section class="card col-lg-4 mx-2" style="width: 20rem;">
+        <img src="/assets/VD.webp" alt="coffe image" class="img-fluid">
+        <div class="card-body">
+          <h5 class="card-title">Contact Us</h5>
+          <ul class="list-unstyled">
+            <li class="card-text"><i class="fa fa-map-marker"></i> 123 Street Name, City, Country</li>
+            <li class="card-text"><i class="fa fa-phone"></i> +123 456 7890</li>
+            <li class="card-text"><i class="fa fa-envelope"></i> info@example.com</li>
+          </ul>
+        </div>
+      </section>
+      <section class="card col-lg-4 mx-2" style="width: 20rem;">
+        <img src="/assets/HR.webp" alt="coffe image" class="img-fluid">
+        <div class="card-body">
+          <h5 class="card-title">Contact Us</h5>
+          <ul class="list-unstyled">
+            <li class="card-text"><i class="fa fa-map-marker"></i> 123 Street Name, City, Country</li>
+            <li class="card-text"><i class="fa fa-phone"></i> +123 456 7890</li>
+            <li class="card-text"><i class="fa fa-envelope"></i> info@example.com</li>
+          </ul>
+        </div>
+      </section>
+    </div>
+  </main>
+
   <footer class=" text-white pt-4" style="background-color: #7e5217;">
     <div class="container">
       <div class="row">
-        <!-- About Section -->
         <div class="col-md-4">
           <h5>About Us</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante
             dapibus diam.</p>
         </div>
 
-        <!-- Links Section -->
         <div class="col-md-4">
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Home</a></li>
-            <li><a href="#" class="text-white">About</a></li>
-            <li><a href="#" class="text-white">Services</a></li>
-            <li><a href="#" class="text-white">Contact</a></li>
+            <li><a href="index.html" class="text-white">Home</a></li>
+            <li><a href="om-oss.html" class="text-white">Om Oss</a></li>
+            <li><a href="produkter.html" class="text-white">Produkter</a></li>
           </ul>
         </div>
 
-        <!-- Contact Section -->
         <div class="col-md-4">
           <h5>Contact Us</h5>
           <ul class="list-unstyled">
             <li><i class="fa fa-map-marker"></i> 123 Street Name, City, Country</li>
-            <li><i class="fa fa-phone"></i> +123 456 7890</li>
-            <li><i class="fa fa-envelope"></i> info@example.com</li>
+            <li><a href="tel:+1234567890" style="text-decoration: none; color: white; cursor: pointer;">+123 456
+                7890</a></li>
+            <li><a href="mailto:info@example.com" style="text-decoration: none; color: white; cursor: pointer;"><i
+                  class="fa fa-envelope"></i> info@example.com<a>
+            <li>
           </ul>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="mt-3">© 2024 Your Company. All Rights Reserved.</p>
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="mt-3">© 2024 Your Company. All Rights Reserved.</p>
+          </div>
         </div>
       </div>
-    </div>
   </footer>
 
 </body>
