--- a/produkter.html
+++ b/produkter.html
@@ -78,7 +78,7 @@
       </div>
     </section>
 
-    <section id="coffee-parties" class="mt-5">
+    <section id="coffee-parties" style="background-color: #ffe3bf36;" class="my-5 p-4">
       <h2 class="mb-4">Kaffeparty</h2>
       <div class="row">
         <div class="col-md-6">
@@ -95,7 +95,7 @@
     </section>
   </main>
 
-  <footer class="bg-dark text-white pt-4">
+  <footer class=" text-white pt-4" style="background-color: #7e5217;">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
@@ -107,10 +107,9 @@
         <div class="col-md-4">
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Home</a></li>
-            <li><a href="#" class="text-white">About</a></li>
-            <li><a href="#" class="text-white">Services</a></li>
-            <li><a href="#" class="text-white">Contact</a></li>
+            <li><a href="index.html" class="text-white">Home</a></li>
+            <li><a href="om-oss.html" class="text-white">Om Oss</a></li>
+            <li><a href="produkter.html" class="text-white">Produkter</a></li>
           </ul>
         </div>
 
@@ -118,18 +117,20 @@
           <h5>Contact Us</h5>
           <ul class="list-unstyled">
             <li><i class="fa fa-map-marker"></i> 123 Street Name, City, Country</li>
-            <li><i class="fa fa-phone"></i> +123 456 7890</li>
-            <li><i class="fa fa-envelope"></i> info@example.com</li>
+            <li><a href="tel:+1234567890" style="text-decoration: none; color: white; cursor: pointer;">+123 456
+                7890</a></li>
+            <li><a href="mailto:info@example.com" style="text-decoration: none; color: white; cursor: pointer;"><i
+                  class="fa fa-envelope"></i> info@example.com<a>
+            <li>
           </ul>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="mt-3">© 2024 Your Company. All Rights Reserved.</p>
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="mt-3">© 2024 Your Company. All Rights Reserved.</p>
+          </div>
         </div>
       </div>
-    </div>
   </footer>
 
 </body>
