--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/style.css">
   <title>Kaffe Party</title>
 </head>
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg text-white" style="background-color: #7e5217;">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg text-white fixed-top bg-primary">
+      <div class=" container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
           aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/index.html"><img src="/assets/logo.png" height="50" alt="Logo"></a>
+        <a class="navbar-brand" href="/index.html"><img src="/assets/logo.png" height="40" alt="Logo"></a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -38,65 +39,76 @@
     </nav>
   </header>
 
-  <man class="main">
-    <div class="container">
-      <h1 class="text-center mb-4">Välkommen till Kaffe Party</h1>
-      <div class="row  mb-4">
-        <div class="col-lg-8 col-sm-6">
-          <img src="/assets/coffe5.webp" class="card-img-top img-fluid rounded" alt="coffe party image">
+  <man class="container m-4" role="main">
+
+    <div class="m-4">
+      <h1 class="text-center mt-0 display-4 display-md-3 display-lg-2">Välkommen till Kaffe Party</h1>
+      <div class="row m-lg-5 my-5  justify-content-around align-items-center rounded bg-secondary  custom-box">
+        <div class="col-lg-6 col-sm-6 ">
+          <img src="/assets/coffe5.webp" class="card-img-top img-fluid rounded " alt="coffe party image">
         </div>
-        <div class="col-lg-4 col-sm-6 ml-4">
-          <h3 class="text-capitalize my-3 ">Vilka är vi?</h3>
-          <p class="lead text-center p-4" style="background-color: #ffe3bf36;">Lorem ipsum dolor sit, amet consectetur
-            adipisicing elit. Praesentium, optio eaque
-            neque quas amet fuga blanditiis repellat suscipit quaerat aperiam! Fugit vero aliquid consequuntur
-            reiciendis ? Doloribus ipsam possimus cumque?
-          </p>
+        <div class="col-lg-4 col-sm-6 ">
+          <div class="d-flex flex-column align-items-center text-md-start">
+            <h3 class="text-capitalize m-3 ">Vilka är vi?</h3>
+            <p class="lead ">Lorem ipsum dolor sit, amet consectetur
+              adipisicing elit. Praesentium, optio eaque
+              neque quas amet fuga blanditiis repellat suscipit quaerat aperiam! Fugit vero aliquid consequuntur
+              reiciendis ? Doloribus ipsam possimus cumque?
+            </p>
+          </div>
         </div>
       </div>
-      <div class="row  mb-4">
-        <div class="col-lg-8 col-sm-6">
+      <div class="row m-lg-5 my-5  justify-content-around align-items-center rounded bg-secondary  custom-box">
+        <div class="col-lg-6 col-sm-6">
           <img src="/assets/coffe2.webp" class="card-img-top img-fluid rounded" alt="coffe party image">
         </div>
-        <div class="col-lg-4 col-sm-6 ml-4">
-          <h3 class="text-capitalize my-3">Vad gör vi?</h3>
-          <p class="lead text-center p-4" style="background-color: #ffe3bf36;">Lorem ipsum dolor, sit consectetur
-            adipisicing elit. Nisi omnis quod atque
-            quo, quos neque veritatis rerum facilis autem. Dolores reiciendis quo provident itaque molestias repellendus
-            dolor natus blanditiis numquam.
-          </p>
+        <div class="col-lg-4 col-sm-6 ml-4 fs-md-2">
+          <div class="d-flex flex-column align-items-center text-md-start">
+            <h3 class="text-capitalize m-3">Vad gör vi?</h3>
+            <p class="lead">Lorem ipsum dolor, sit consectetur
+              adipisicing elit. Nisi omnis quod atque
+              quo, quos neque veritatis rerum facilis autem. Dolores reiciendis quo provident itaque molestias
+              repellendus
+              dolor natus blanditiis numquam.
+            </p>
+          </div>
         </div>
       </div>
-      <div class="row  mb-4">
-        <div class="col-lg-8 col-sm-6">
+      <div class="row m-lg-5 my-5  justify-content-around align-items-center rounded bg-secondary  custom-box">
+        <div class="col-lg-6 col-sm-6">
           <img src="/assets/coffe3.webp" class="card-img-top img-fluid rounded" alt="coffe party image">
         </div>
-        <div class="col-lg-4 col-sm-6 ml-4">
-          <h3 class="text-capitalize my-3">Varför oss?</h3>
-          <p class="lead text-center p-4" style="background-color: #ffe3bf36;">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae fugiat distinctio eum ut natus
-            cupiditate harum molestias vitae, sit, dignissimos sint ullam dolor saepe atque, autem in delectus iusto id?
-          </p>
+        <div class="col-lg-4 col-sm-6 ">
+          <div class="d-flex flex-column align-items-center text-md-start">
+            <h3 class="text-capitalize m-3">Varför oss?</h3>
+            <p class="lead ">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae fugiat distinctio eum ut natus
+              cupiditate harum molestias vitae, sit, dignissimos sint ullam dolor saepe atque, autem in delectus iusto
+              id?
+            </p>
+          </div>
         </div>
       </div>
-      <div class="row  mb-4">
-        <div class="col-lg-8 col-sm-6">
+      <div class="row m-lg-5 my-5  justify-content-around align-items-center rounded bg-secondary  custom-box">
+        <div class="col-lg-6 col-sm-6">
           <img src="/assets/coffe4.webp" class="card-img-top img-fluid rounded" alt="coffe party image">
         </div>
-        <div class="col-lg-4 col-sm-6 ml-4">
-          <h3 class="text-capitalize my-3">Kaffeparty, så fungerar det!</h3>
-          <p class="lead text-center p-4" style="background-color: #ffe3bf36;">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus incidunt quaerat eaque aliquid rem, aut
-            distinctio deleniti consectetur perferendis, voluptatum non dignissimos nobis nisi unde nesciunt corporis
-            alias autem facere!
-          </p>
+        <div class="col-lg-4 col-sm-6 ml-4 ">
+          <div class="d-flex flex-column align-items-center text-md-start">
+            <h3 class="text-capitalize m-3">Kaffeparty, så fungerar det!</h3>
+            <p class="lead">Lorem ipsum dolor, sit consectetur
+              adipisicing elit. Nisi omnis quod atque
+              quo, quos neque veritatis rerum facilis autem. Dolores reiciendis quo provident itaque molestias
+              repellendus
+              dolor natus blanditiis numquam.
+            </p>
+          </div>
         </div>
       </div>
-
-
     </div>
+
   </man>
-  <footer class=" text-white pt-4" style="background-color: #7e5217;">
+  <footer class=" text-white pt-4 bg-primary">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
