--- a/om-oss.html
+++ b/om-oss.html
@@ -6,18 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/style.css">
   <title>Kaffe Party | Om Oss</title>
 </head>
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg text-white" style="background-color: #7e5217;">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg text-white fixed-top bg-primary">
+      <div class=" container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
           aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="index.html"><img src="/assets/logo.png" height="50" alt="Logo"></a>
+        <a class="navbar-brand" href="/index.html"><img src="/assets/logo.png" height="40" alt="Logo"></a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -35,10 +39,12 @@
     </nav>
   </header>
 
-  <main class="container mt-5">
-    <div class="text-center mb-4">
-      <h1>Om Oss</h1>
-      <p>Lorem ipsum <strong>kaffeParty</strong> dolor sit amet consectetur adipisicing elit. Culpa molestias, illum
+  <main class="m-4" role="main">
+    <div class="container">
+      <h1 class="text-center mt-5">Om Oss</h1>
+      <p class="my-5 p-4" style="background-color: #ffe3bf36;">Lorem ipsum <strong>kaffeParty</strong> dolor sit amet
+        consectetur
+        adipisicing elit. Culpa molestias, illum
         neque officia
         suscipit labore
         laboriosam sapiente nobis, <small>qui quaerat amet reprehenderit corrupti, sunt saepe odio cum nihil!
@@ -52,7 +58,7 @@
 
     <div class="row justify-content-center my-4">
       <h2 class="text-center mb-4">More info</h2>
-      <section class="card col-lg-4 mx-2" style="width: 20rem;">
+      <section class="card col-lg-4 m-2 " style="width: 18rem;">
         <img src="/assets/VD.webp" alt="coffe image" class="img-fluid">
         <div class="card-body">
           <h5 class="card-title">Contact Us</h5>
@@ -63,7 +69,7 @@
           </ul>
         </div>
       </section>
-      <section class="card col-lg-4 mx-2" style="width: 20rem;">
+      <section class="card col-lg-4 m-2 " style="width: 18rem;">
         <img src="/assets/HR.webp" alt="coffe image" class="img-fluid">
         <div class="card-body">
           <h5 class="card-title">Contact Us</h5>
@@ -77,7 +83,7 @@
     </div>
   </main>
 
-  <footer class=" text-white pt-4" style="background-color: #7e5217;">
+  <footer class=" text-white pt-4 bg-primary">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
