--- a/produkter.html
+++ b/produkter.html
@@ -4,23 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kaffe Party | Produkter</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/style.css">
+  <title>Kaffe Party | Produkter</title>
 </head>
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg text-white" style="background-color: #7e5217;">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg text-white fixed-top bg-primary">
+      <div class=" container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
           aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon text-red"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="index.html"><img src="/assets/logo.png" height="50" alt="Logo"></a>
+        <a class="navbar-brand" href="/index.html"><img src="/assets/logo.png" height="40" alt="Logo"></a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -43,6 +44,7 @@
     <section id="coffee-machines">
       <h2 class="mb-4">Kaffemaskiner</h2>
       <div class="row">
+
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
             <img src="/assets/coffemachine1.webp" class="card-img-top" alt="Coffee Machine 1">
@@ -53,7 +55,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
             <img src="/assets/coffemachine2.webp" class="card-img-top" alt="Coffee Machine 2">
@@ -64,7 +65,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
             <img src="/assets/coffemachine3.webp" class="card-img-top" alt="Coffee Machine 3">
@@ -75,10 +75,11 @@
             </div>
           </div>
         </div>
+
       </div>
     </section>
 
-    <section id="coffee-parties" style="background-color: #ffe3bf36;" class="my-5 p-4">
+    <section id="coffee-parties" class="my-5 p-4  bg-secondary">
       <h2 class="mb-4">Kaffeparty</h2>
       <div class="row">
         <div class="col-md-6">
@@ -95,7 +96,7 @@
     </section>
   </main>
 
-  <footer class=" text-white pt-4" style="background-color: #7e5217;">
+  <footer class=" text-white pt-4 bg-primary">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
